====================================
release 1.4x 
====================================

- tails from stdin

====================================
06/07/09 release 1.42 
====================================
- For Errors and Fatals the log trace 
is included in the final report along with 
the datestamp.
- Final report now reports separately for each log  
- Updated Documentation


====================================
19/05/09 release 1.4 
====================================
- Better regex for ColorParser, which 
fixes definitely the fact of having for 
instance the "error" and "warn" string 
in same log trace. First to appear, the 
one that takes preference.

- Updated doc, at least you need Python 
2.4

- Information included in setup.py to 
include log4tailer in Pypi site.

- Silent mode is for Fatal level only. 
Documentation has been updated.

====================================
17/05/09 release 1.3 
====================================
- Bug fixes numbers: 4,5,6
- New feature: Analytics
- Date was missing in mail action
Fixed.

====================================
release 1.2
====================================
- New feature: PauseModes. For each 
level it will pause the tailing. 
debug and info no pause by default
warn 1 seconds
error 3 seconds
fatal and targets 5 seconds

- At very beginning (first tail) that 
tails last 10 lines in logs, only 
printAction is available with no 
PauseModes.

- Bug fixes in mail Action. There 
were some things not working 
properly yet. 

- Tests provided in distribution.
python setup.py test 

- More automated commands - clean, 
release, test, compile docs

- Bug fix number 3 about making
keys in config case insensitive

====================================
release 1.1 
====================================
- Provides installation (discutils)
- Emulates the same behaviour as tail 
command when printing the log headers while
tailing

====================================
release 1.0
====================================